kustomize-happy-cms/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  labels:
    name: demo
    monokle.io/demo: kustomize-basic
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bloop
                port:
                  number: 80
